added deadline for registration

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <h2>Register</h2>
         </div>
 
-        <p>To register to the event, please click on the button below to fill the form</p>
+        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Friday 27 November.</p>
 
         <div class="d-flex justify-content-center">
           <a class="btn btn-warning" href="https://framaforms.org/brainhack-marseille-2020-1605623349" target="_blank"><h4>REGISTER</h4></a>
