--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
       <div class="row justify-content-center">
         <div class="col" data-aos="fade-left" data-aos-delay="100">
           <h4>Required skills</h4>
-          This is a cross-language project. Experience with super computers is also welcomed
+          This is a cross-language project. Experience with super computers is also welcome
         </div>
       </div>
 
