--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
           </ol>
           <div class="carousel-inner">
 
@@ -344,6 +345,19 @@
                   <h5>Integration of DAX pipeline with XNAT</h5>
                 </a>
                 <p>by Dipankar Bachar, David Meunier & Aissam Rahmani</p>
+              </div>
+            </div>
+
+            <!-- PROJECT 6 : Slam -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project6">
+                <img class="mx-auto d-block w-50" src="images/projects/project6.jpg" alt="Sixth slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project6">
+                  <h5>Development of the SLAM -Surface anaLysis And Modeling- python package</h5>
+                </a>
+                <p>by Guillaume Auzias & the MeCA team</p>
               </div>
             </div>
 
@@ -602,75 +616,75 @@
     <!-- =========================== -->
 
     <!-- ======= Project4 description bullet ======= -->
-      <a class="active" id="project4">
-        <div class="row justify-content-center align-items-center">
-      </a>
+    <a class="active" id="project4">
+      <div class="row justify-content-center align-items-center">
+    </a>
 
-          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
-            <img src="images/projects/project4.jpg" class="img-fluid" alt="">
-          </div>
-
-          <div class="col">
-
-            <div class="container my-4">
-
-              <!-- <a id="project1"> -->
-              <h3>Macapype: segmentation to mesh pipeline</h3>
-              <!-- </a> -->
-              <p>
-                by <a style="color: black" href="https://github.com/davidmeunier79">David Meunier</a>, Bastien Cagna & <a style="color: black" href="https://github.com/kepkeeloh">Kep Kee Loh</a>
-              </p>
-
-              <hr>
-
-              <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project4" role="button" aria-controls="collapse_project4"><h4>Description</h3></button>
-
-              <section class="collapse" id="collapse_project4">
-                Macapype is an open source python package based on the nipype framework. Dedicated to the processing of PNH MRI data, Macapype brings together existing tools from popular neuroimaging softwares (e.g. FSL, ANTs, SPM, AFNI etc), and the wraps of specialised scripts for PNH MRI data processing. Currently, Macapype also provides predefined pipelines for the preprocessing, brain extraction, and segmentation of PNH MRI data that are easy to use, and customizable to various input file types (T1w or T1w/T2w). These segmentation pipelines have been successfully adapted to MR images from various PNH species, including the macaque monkey, baboons and marmosets. To get started you can explore the <a href="https://github.com/Macatools/macapype">github page</a> of the project and the retalive <a href="https://macatools.github.io/macapype/index.html">documentation</a>. 
-                <br>Link to the <a href="https://framateam.org/macapype-users/channels/town-square">mattermost users forum</a> (requires a framateam account).
-                <br>
-                <br>In this brainhack, we would like to expand the existing pipelines of Macapype to allow the generation of surface meshes following the segmentation of the MR images. So far, at the INT, macapype users have been performing the above process (i.e. surface mesh generation) by first, using a set of customised scripts to import Macapype-generated segmentations into Brainvisa, and second, to manually (point-and-click) generate surface meshes via the Morphologist Toolbox in Brainvisa. We aim to incorporate these two steps as an additional module in Macapype, which will enable the generation of surface meshes directly from the segmentations produced by Macapype. The final result would be a powerful pipeline that takes raw PNH structural MR scans as input, and generating tissue segmentation masks and surface meshes as outputs.
-              </section>
-
-            </div>
-          </div>
+        <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+          <img src="images/projects/project4.jpg" class="img-fluid" alt="">
         </div>
 
-        <div class="row justify-content-center">
-          <div class="col" data-aos="fade-left" data-aos-delay="100">
-            <h4>Required skills</h4>
-            Other related softwares can be used for this project, such as BrainVISA, FreeSurfer and Nipype. Anyone that has PNH data to process is welcome.
+        <div class="col">
+
+          <div class="container my-4">
+
+            <!-- <a id="project1"> -->
+            <h3>Macapype: segmentation to mesh pipeline</h3>
+            <!-- </a> -->
+            <p>
+              by <a style="color: black" href="https://github.com/davidmeunier79">David Meunier</a>, Bastien Cagna & <a style="color: black" href="https://github.com/kepkeeloh">Kep Kee Loh</a>
+            </p>
+
+            <hr>
+
+            <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project4" role="button" aria-controls="collapse_project4"><h4>Description</h3></button>
+
+            <section class="collapse" id="collapse_project4">
+              Macapype is an open source python package based on the nipype framework. Dedicated to the processing of PNH MRI data, Macapype brings together existing tools from popular neuroimaging softwares (e.g. FSL, ANTs, SPM, AFNI etc), and the wraps of specialised scripts for PNH MRI data processing. Currently, Macapype also provides predefined pipelines for the preprocessing, brain extraction, and segmentation of PNH MRI data that are easy to use, and customizable to various input file types (T1w or T1w/T2w). These segmentation pipelines have been successfully adapted to MR images from various PNH species, including the macaque monkey, baboons and marmosets. To get started you can explore the <a href="https://github.com/Macatools/macapype">github page</a> of the project and the retalive <a href="https://macatools.github.io/macapype/index.html">documentation</a>. 
+              <br>Link to the <a href="https://framateam.org/macapype-users/channels/town-square">mattermost users forum</a> (requires a framateam account).
+              <br>
+              <br>In this brainhack, we would like to expand the existing pipelines of Macapype to allow the generation of surface meshes following the segmentation of the MR images. So far, at the INT, macapype users have been performing the above process (i.e. surface mesh generation) by first, using a set of customised scripts to import Macapype-generated segmentations into Brainvisa, and second, to manually (point-and-click) generate surface meshes via the Morphologist Toolbox in Brainvisa. We aim to incorporate these two steps as an additional module in Macapype, which will enable the generation of surface meshes directly from the segmentations produced by Macapype. The final result would be a powerful pipeline that takes raw PNH structural MR scans as input, and generating tissue segmentation masks and surface meshes as outputs.
+            </section>
+
           </div>
         </div>
+      </div>
 
-        <div class="row justify-content-center mt-4">
+      <div class="row justify-content-center">
+        <div class="col" data-aos="fade-left" data-aos-delay="100">
+          <h4>Required skills</h4>
+          Other related softwares can be used for this project, such as BrainVISA, FreeSurfer and Nipype. Anyone that has PNH data to process is welcome.
+        </div>
+      </div>
 
-            <div class="progress">
-              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                MRI data processing 80%
-              </div>
+      <div class="row justify-content-center mt-4">
+
+          <div class="progress">
+            <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              MRI data processing 80%
             </div>
+          </div>
 
-            <div class="progress">
-              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Python 60%
-              </div>
+          <div class="progress">
+            <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Python 60%
             </div>
+          </div>
 
-            <div class="progress">
-              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Nipype coding 50%
-              </div>
+          <div class="progress">
+            <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Nipype coding 50%
             </div>
+          </div>
 
 <!--             <div class="progress">
-              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Python/Javascript 20%
-              </div>
-            </div> -->
+            <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Python/Javascript 20%
+            </div>
+          </div> -->
 
-        </div>
-        <hr style="height:20px">
+      </div>
+      <hr style="height:20px">
     <!-- =========================== -->
 
     <!-- ======= Project5 description bullet ======= -->
@@ -760,6 +774,90 @@
             Experience with super computer 50%
           </div>
         </div>
+
+      </div>
+      <hr style="height:20px">
+    <!-- =========================== -->
+
+    <!-- ======= Project6 description bullet ======= -->
+    <a class="active" id="project6">
+      <div class="row justify-content-center align-items-center">
+    </a>
+
+        <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+          <img src="images/projects/project6.jpg" class="img-fluid" alt="">
+        </div>
+
+        <div class="col">
+
+          <div class="container my-4">
+
+            <!-- <a id="project1"> -->
+            <h3>Development of the SLAM -Surface anaLysis And Modeling- python package</h3>
+            <!-- </a> -->
+            <p>
+              by <a style="color: black" href="https://github.com/gauzias">Guillaume Auzias</a> & the <a style="color: black" href="http://meca-brain.org">MeCA team</a>
+            </p>
+
+            <hr>
+
+            <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project6" role="button" aria-controls="collapse_project6"><h4>Description</h3></button>
+
+            <section class="collapse" id="collapse_project6">
+              <a href="https://gauzias.github.io/slam/">Slam</a> is an open source python package dedicated to the representation of neuroanatomical surfaces stemming from MRI data in the form of triangular meshes and to their processing and analysis.
+
+              Main features include read/write gifti (and nifti) file format, geodesic distance computation, several implementations of graph Laplacian and Gradient, mesh surgery (boundary identification, large hole closing), several types of mapping between the mesh and a sphere, a disc...
+              <br>
+              Have a look at the examples on the documentation <a href="https://gauzias.github.io/slam/auto_examples/index.html">website</a>.
+              <br>
+              <br>
+              During this brainhack, our objectives are:
+              <ul>
+                <li>to add as a new feature the algorithms for computing surface profiling as described in Li, K., Guo, L., Li, G., Nie, J., Faraco, C., Cui, G., Zhao, Q., Miller, L.S. and Liu, T., 2010. Gyral folding pattern analysis via surface profiling. NeuroImage, 52(4), pp.1202-1214. <a href="https://doi.org/10.1016/j.neuroimage.2010.04.263">https://doi.org/10.1016/j.neuroimage.2010.04.263</a></li>
+                <li>to improve the documentation with new examples to enrich the <a href="https://gauzias.github.io/slam/auto_examples/index.html">gallery</a>, which helps a lot potential new users</li>
+                <li>to switch the example codes from python script to Jupiter notebooks</li>
+                <li>to further improve code quality with new unitest and potential speed-up of specific pieces of code such as for instance the computation of the curvature</li>
+                <li>to help potential users to get familiar with this python package</li>
+              </ul>
+              We are of course also open if new features are proposed from the contributors.
+            </section>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col" data-aos="fade-left" data-aos-delay="100">
+          <h4>Required skills</h4>
+          Minimal skills in python coding and github are required, but various levels of expertise are welcome since some of our objectives can be addressed with limited coding effort such as augmenting the documentation.
+        </div>
+      </div>
+
+      <div class="row justify-content-center mt-4">
+
+          <div class="progress">
+            <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Share ideas and good time 100%
+            </div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Python 50%
+            </div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Mesh processing 20%
+            </div>
+          </div>
+
+<!--             <div class="progress">
+            <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Python/Javascript 20%
+            </div>
+          </div> -->
 
       </div>
       <hr style="height:20px">
