Update title demo slam

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <ul>
                   <li>14h00-14h15 Extracting task-related brain networks using Frites - <b>Etienne Combrisson</b></li>
                   <li>14h15-14h30 Macapype [TITLE TO BE DEFINED] - <b>David Meunier</b></li>
-                  <li>14h30-14h45 Slam [TITLE TO BE DEFINED] - <b>Guillaume Auzias</b></li>
+                  <li>14h30-14h45 The Surface anaLysis And Modeling -SLAM- python toolbox: how to slam your brain! - <b>Guillaume Auzias</b></li>
                   <li>14h45-15h00 eCOBIDAS: a webApp to that writes your methods section for you - <b>Rémi Gau</b></li>
                 </ul>
               </td>
