Fix missing url

--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
                 <h3>Optimized Pipeline for the modelling of Spiking Neural Networks (SNNs)</h3>
                 <!-- </a> -->
                 <p>
-                  by Alberto Vergani, <a style="color: black" href="https://github.com/laurentperrinet">Laurent Perrinet</a> & <a style="color: black" href="https://github.com/JuliaSprenger">Julia Sprenger</a>
+                  by <a style="color: black" href="https://github.com/albertoarturovergani">Alberto Vergani</a>, <a style="color: black" href="https://github.com/laurentperrinet">Laurent Perrinet</a> & <a style="color: black" href="https://github.com/JuliaSprenger">Julia Sprenger</a>
                 </p>
 
                 <hr>
