google calendar link

--- a/index.html
+++ b/index.html
@@ -140,7 +140,13 @@
           <h2>Program</h2>
         </div>
 
-        <p>Please find bellow the program of the Brainhack event (timezone Paris UTC+1)</p>
+        <p>Please find bellow the program of the Brainhack event (timezone Paris UTC+1). If you want to add the following schedule to your own personal Google agenda, click on the "Save the dates" button and then click on the "+ Google agenda" located at the bottom right of your screen.</p>
+
+        <div class="d-flex justify-content-center">
+          <a class="btn btn-warning" href="https://calendar.google.com/calendar/embed?src=brainhack.marseille%40gmail.com&ctz=Europe%2FParis" target="_blank"><h4>SAVE THE DATES</h4></a>
+        </div>
+
+        <br>
 
       <!-- ===================== December 2nd ===================== -->
         <div class="section-title">
