--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <tr>
               <th scope="row" class="align-middle text-nowrap">11h30-12h30</th>
               <td class="table-warning"><b>Unconference - Cyril Pernet</b>
-                <p>About COBIDAS MEEG, <i><a href="https://www.nature.com/articles/s41593-020-00709-0">(Pernet et al. Nature Neuro 2020)</a></i></p>
+                <p>Recommendations for reproducible EEG and MEG research (from the OHBM Cobidas committee), <i><a href="https://www.nature.com/articles/s41593-020-00709-0">(Pernet et al. Nature Neuro 2020)</a></i></p>
               </td>
             </tr>
             <tr>
@@ -221,7 +221,7 @@
             <tr>
               <th scope="row" class="align-middle text-nowrap">16h00-17h00</th>
               <td class="table-warning"><b>Unconference - Thomas Brochier & Julia Sprenger</b>
-                <p>An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant)</p>
+                <p>An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant), , <i><a href="https://www.nature.com/articles/sdata201855">(Brochier et al. Sci Data 2018)</a></i></p>
               </td>
             </tr>
           </tbody>
@@ -246,7 +246,7 @@
               <tr>
                 <th scope="row" class="align-middle text-nowrap">14h00-15h00</th>
                 <td class="table-warning"><b>Unconference - Guillaume Dumas</b>
-                  <p>Hands on reproducibility, <i><a href="https://academic.oup.com/gigascience/article/7/7/giy077/5046609">(Kim et al. GigaScience 2018)</a></i></p>
+                  <p>Hands on experiments about reproducible analyses, <i><a href="https://academic.oup.com/gigascience/article/7/7/giy077/5046609">(Kim et al. GigaScience 2018)</a></i></p>
                 </td>
               </tr>
               <tr>
