Updated titles in the program
Updated the titles of the unconferences in the program to make them more readable

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <tr>
               <th scope="row" class="align-middle text-nowrap">16h00-17h00</th>
               <td class="table-warning"><b>Unconference - Thomas Brochier & Julia Sprenger</b>
-                <p>An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant), , <i><a href="https://www.nature.com/articles/sdata201855">(Brochier et al. Sci Data 2018)</a></i></p>
+                <p>An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant), <i><a href="https://www.nature.com/articles/sdata201855">(Brochier et al. Sci Data 2018)</a></i></p>
               </td>
             </tr>
           </tbody>
