Updated contact email address

--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>sylvain.takerkart@univ-amu.fr</p>
+                <p>brainhack.marseille@gmail.com</p>
               </div>
             </div>
 
