--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
           <h2>Register</h2>
         </div>
 
-        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Friday 27 November.</p>
+        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Friday 27 November.<br><b>Registration is now closed.</b></p>
 
         <div class="d-flex justify-content-center">
-          <a class="btn btn-warning" href="https://framaforms.org/brainhack-marseille-2020-1605623349" target="_blank"><h4>REGISTER</h4></a>
+          <a class="btn btn-secondary" href="#register" title="Sorry, registration is closed."><h4>REGISTER</h4></a>
         </div>
       </div>
     </section>
