--- a/index.html
+++ b/index.html
@@ -591,7 +591,8 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mt-4">
+      
+          <div class="BG col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic"><img src="images/team/cmb.png" class="img-fluid" alt="" title="&#128525&#128525&#128525"></div>
               <div class="member-info">
@@ -601,6 +602,7 @@
               </div>
             </div>
           </div>
+        
 
         </div>
 
