--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@
           </div>
 
       
-          <div class="BG col-lg-4 mt-4">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+          <div class="col-lg-4 mt-4">
+            <div class="memberBG d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic"><img src="images/team/cmb.png" class="img-fluid" alt="" title="&#128525&#128525&#128525"></div>
               <div class="member-info">
                 <h4>Etienne Combrisson</h4>
