updated sponsors and team

--- a/index.html
+++ b/index.html
@@ -102,7 +102,13 @@
 
           <div class="d-flex align-items-center justify-content-center">
             <a href="https://neuro-marseille.org/">
-              <img src="images/neuroms.png" class="img-fluid" alt="" width="200">
+              <img src="images/neuroms.png" class="img-fluid" alt="" width="250">
+            </a>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://neuro-marseille.org/formation/">
+              <img src="images/neurosc.png" class="img-fluid" alt="" width="200">
             </a>
           </div>
 
@@ -575,7 +581,18 @@
               <div class="member-info">
                 <h4>Martin Szinte</h4>
                 <span></span>
-                <p>Postdoc</p>
+                <p>Researcher</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/DrPron.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Alexandre Pron</h4>
+                <span></span>
+                <p>Research Engineer</p>
               </div>
             </div>
           </div>
