--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
         <div class="row justify-content-center">
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100" width="100px">
               <div class="pic"><img src="images/team/tkk.png" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -531,7 +531,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mt-4 mt-lg-0">
+          <div class="col-lg-4 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="images/team/meunier.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
