updated team and projects

--- a/index.html
+++ b/index.html
@@ -308,16 +308,16 @@
           </ol>
           <div class="carousel-inner">
 
-            <!-- PROJECT 1 : GPU FRITES -->
+            <!-- PROJECT 1 : EyetrackPrep -->
             <div class="carousel-item active">
               <a class="scrollto active" href="#project1">
-                <img class="mx-auto d-block w-50" src="images/projects/a_project.jpeg" alt="First slide">
+                <img class="mx-auto d-block w-50" src="images/projects/eyetrack.png" alt="First slide">
               </a>
               <div class="carousel-caption d-none d-md-block">
                 <a class="scrollto active" href="#project1">
-                  <h5>Project title</h5>
+                  <h5>EyetrackPrep</h5>
                 </a>
-                <p>by projects manteiners</p>
+                <p>by Martin Szinte, Anna Montagnini & Guillaume Masson</p>
               </div>
             </div>
 
@@ -432,7 +432,7 @@
       </a>
 
           <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
-            <img src="images/projects/a_project.jpeg" class="img-fluid" alt="">
+            <img src="images/projects/eyetrack.png" class="img-fluid" alt="">
           </div>
 
           <div class="col">
@@ -440,10 +440,10 @@
             <div class="container my-4">
 
               <!-- <a id="project1"> -->
-              <h3>Project title</h3>
+              <h3>EyetrackPrep: an automatic tool to pre-process eye-tracking data (fixation, blinks, saccades, micro-saccade, pursuit, pupillometry)</h3>
               <!-- </a> -->
               <p>
-                by <a style="color: black" href="https://theuselessweb.com/">Project Manteiners</a>
+                by <a style="color: black" href="https://github.com/mszinte/">Martin Szinte</a>, Anna Montagnini & Guillaume Masson
               </p>
 
               <hr>
@@ -451,13 +451,17 @@
               <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project1" role="button" aria-controls="collapse_project1"><h4>Description</h3></button>
 
               <section class="collapse" id="collapse_project1">
-                Here we put <b>the description </b>  and some <a href="https://theuselessweb.com/">link</a> of the project and the documentation.
-                <br>
-                <br>Additional bullet point infos:
+                This project aims at providing to the eye-tracking research community a standardized software allowing the automatic computation and quality check of eye-tracking data. This includes any records of eye position metrics such as fixation, eye movements (saccades, microsaccades, pursuit), blinks, and pupillometry.
 
+                EyeTrackPrep is meant in the future to be used by all researchers using eye-tracking data. It aims at simplifying and standardizing this domain to improve research reproducibility as well as the share of collected data.
+
+                Eye-tracking community lack such a tool even if a need for it is clear. Although this project might take time until a functional software is produced, it will modify for long term the way cognitive neuroscientists work and generate open science of high quality data akin what happened with the development of <a href="https://bids-apps.neuroimaging.io/apps/">BIDS-apps</a> from the neuroimaging community.
+                <br>
+                <br>The following points are going to be addressed in this project: 
                 <ul>
-                  <li>This</li>
-                  <li>and that</li>
+                  <li>Discussions about the tool, its goals, what it should and what it should not include</li>
+                  <li>Modeling of eye movement metrics (e.g. saccade detection from eye-traking position time series)</li>
+                  <li>Visualization for data quality check</li>
                 </ul>
               </section>
 
@@ -468,25 +472,25 @@
         <div class="row justify-content-center">
           <div class="col" data-aos="fade-left" data-aos-delay="100">
             <h4>Required skills</h4>
-            Max 4 required skills and their relative percentage.
+            This is a python project, a mix of coding and non-coding skills are required:
           </div>
         </div>
 
         <div class="row justify-content-center mt-4">
 
             <div class="progress">
-              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Skill 1 80%
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Knoledge/interest in eyetracking 100%
               </div>
             </div>
 
             <div class="progress">
               <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Skill 2 70%
+                Python programming 70%
               </div>
             </div>
 
-            <div class="progress">
+<!--             <div class="progress">
               <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 Skill 3 50%
               </div>
@@ -496,7 +500,7 @@
               <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 Skill 4 20%
               </div>
-            </div>
+            </div> -->
 
         </div>
         <hr style="height:20px">
@@ -582,6 +586,17 @@
                 <h4>Alexandre Pron</h4>
                 <span></span>
                 <p>Research Engineer</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/moré.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Simon Moré</h4>
+                <span></span>
+                <p>Engineer</p>
               </div>
             </div>
           </div>
